--- a/styles/servicePageCards.module.css
+++ b/styles/servicePageCards.module.css
@@ -67,7 +67,7 @@
 }
 
 .imageWrapper {
-  position: relative;
+  position: relative !important;
   width: 100%;
   aspect-ratio: 7/4;
   overflow: hidden;
