--- a/styles/servicePageCards.module.scss
+++ b/styles/servicePageCards.module.scss
@@ -73,7 +73,7 @@
 }
 
 .imageWrapper {
-  position: relative;
+  position: relative !important;
   width: 100%;
   aspect-ratio: 7 / 4;
   overflow: hidden; // This is crucial for containing the zoom
