--- a/styles/serviceHero.module.css
+++ b/styles/serviceHero.module.css
@@ -6,6 +6,23 @@
   height: 499px;
   width: 100%;
 }
+
+.imageContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+}
+
+.heroImage {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .serviceHero::before {
   content: "";
   position: absolute;
@@ -16,6 +33,7 @@
   background-color: rgba(0, 0, 0, 0.1);
   z-index: 1;
 }
+
 .serviceHero h1 {
   z-index: 2;
   font-size: 3rem;
