--- a/styles/serviceHero.module.scss
+++ b/styles/serviceHero.module.scss
@@ -7,26 +7,41 @@
   justify-content: center;
   height: 499px;
   width: 100%;
+}
 
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.1);
-    z-index: 1;
-  }
+.imageContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+}
 
-  h1 {
-    z-index: 2;
-    font-size: 3rem;
-    font-weight: 900;
-    text-transform: uppercase;
-    text-align: center;
-    color: $offWhite;
-    max-width: 70vw;
-    line-height: 4rem;
-  }
+.heroImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.serviceHero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+  z-index: 1;
+}
+
+.serviceHero h1 {
+  z-index: 2;
+  font-size: 3rem;
+  font-weight: 900;
+  text-transform: uppercase;
+  text-align: center;
+  color: $offWhite;
+  max-width: 70vw;
+  line-height: 4rem;
 }
