unique keys for testimonials

--- a/styles/expertsAwait.module.scss
+++ b/styles/expertsAwait.module.scss
@@ -9,14 +9,20 @@
   padding: 8rem;
 }
 
-.bgImg {
+.bgImgWrapper {
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
   z-index: -1;
+  overflow: hidden;
+}
+
+.bgImg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .content {
