--- a/styles/expertsAwait.module.css
+++ b/styles/expertsAwait.module.css
@@ -7,15 +7,21 @@
   padding: 8rem;
 }
 
-.bgImg {
+.bgImgWrapper {
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
+  z-index: -1;
+  overflow: hidden;
+}
+
+.bgImg {
+  width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  z-index: -1;
 }
 
 .content {
