--- a/styles/cookieConsent.module.scss
+++ b/styles/cookieConsent.module.scss
@@ -49,7 +49,8 @@
   color: $offWhite;
   border: none;
   border-radius: 0.1rem;
-  font-weight: 500;
+  font-weight: 700;
+  text-shadow: 0 0 1px rgba(0, 0, 0, 0.8);
   cursor: pointer;
   transition: background-color 0.2s;
 
