--- a/styles/footerLogo.module.css
+++ b/styles/footerLogo.module.css
@@ -26,4 +26,8 @@
 .socials svg:hover {
   transform: scale(1.2);
   transition: all 1s ease;
+}
+
+.facebook {
+  fill: #ff403f;
 }/*# sourceMappingURL=footerLogo.module.css.map */
