--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -22,6 +22,10 @@
   img {
     margin-right: 0.5rem;
   }
+
+  div:last-of-type {
+    margin-bottom: -0.1rem;
+  }
 }
 
 // Desktop Header
@@ -209,18 +213,7 @@
   }
 }
 
-.socials {
-  display: flex;
-  gap: 0.8rem;
-  padding-right: 0.8rem;
-  margin-right: 0.8rem;
-  height: 100%;
+.socialLinks {
   border-right: 1px solid rgba(255, 255, 255, 0.275);
-  svg {
-    cursor: pointer;
-    transition: all 0.3s ease;
-    &:hover {
-      color: $theme;
-    }
-  }
+  margin-right: 0.8rem;
 }
