fixed header style

--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -200,4 +200,5 @@
 .socialLinks {
   border-right: 1px solid rgba(255, 255, 255, 0.275);
   margin-right: 0.8rem;
+  padding-right: 0.8rem;
 }/*# sourceMappingURL=header.module.css.map */
