adapted to new styles for footer, font and colors

--- a/styles/footerLogo.module.css
+++ b/styles/footerLogo.module.css
@@ -13,6 +13,22 @@
   margin-bottom: 1rem;
 }
 
+.contact {
+  margin: 2rem 0;
+}
+.contact a {
+  color: #a0a2a6;
+  margin-bottom: 1rem;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+}
+.contact a:hover {
+  color: #046999;
+  transition: color 0.5s ease;
+}
+
 .socials {
   display: flex;
   gap: 0.8rem;
@@ -30,4 +46,4 @@
 
 .facebook {
   fill: #046999;
-} /*# sourceMappingURL=footerLogo.module.css.map */
+}/*# sourceMappingURL=footerLogo.module.css.map */
