--- a/styles/footerLogo.module.scss
+++ b/styles/footerLogo.module.scss
@@ -16,6 +16,23 @@
   }
 }
 
+.contact {
+  margin: 2rem 0;
+  a {
+    color: $grayText;
+    margin-bottom: 1rem;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    gap: 0.25rem;
+
+    &:hover {
+      color: $theme;
+      transition: color 0.5s ease;
+    }
+  }
+}
+
 .socials {
   display: flex;
   gap: 0.8rem;
