--- a/styles/footerServices.module.css
+++ b/styles/footerServices.module.css
@@ -16,12 +16,12 @@
 .mainLinks {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.8rem;
 }
 .mainLinks h3 {
   color: #f8f8f8;
   font-size: 1.125rem;
-  margin-bottom: 2rem;
+  margin-bottom: 0.8rem;
 }
 
 .dropdownSection {
@@ -34,7 +34,8 @@
   font-size: 1rem;
   color: #a0a2a6;
   font-weight: 500;
-  margin-top: 1rem;
+  margin-top: 0.8rem;
+  font-family: var(--font-aptos) !important;
 }
 .dropdownSection h3:hover {
   color: #046999;
@@ -44,8 +45,7 @@
   overflow: hidden;
   transition: all 1s ease-out;
 }
-.dropdownSection:hover .dropdownContent,
-.dropdownSection:focus-within .dropdownContent {
+.dropdownSection:hover .dropdownContent, .dropdownSection:focus-within .dropdownContent {
   max-height: 300px;
   padding: 1rem;
 }
@@ -62,4 +62,4 @@
   flex-direction: column;
   gap: 0.5rem;
   padding-left: 1rem;
-} /*# sourceMappingURL=footerServices.module.css.map */
+}/*# sourceMappingURL=footerServices.module.css.map */
