--- a/styles/pageSegment4.module.css
+++ b/styles/pageSegment4.module.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .pageSegment {
   scroll-margin-top: 100px;
   padding: 0 10vw 2rem 10vw;
@@ -12,6 +13,25 @@
   transition: all 0.3s ease;
 }
 .pageSegment img:hover {
+  filter: grayscale(100%);
+  transition: all 0.3s ease;
+}
+
+.pageSegmentGrid {
+  scroll-margin-top: 100px;
+  padding: 0 10vw 2rem 10vw;
+  display: grid;
+  grid-template-columns: 60% 1fr;
+  gap: 4rem;
+  align-items: center;
+}
+.pageSegmentGrid img {
+  flex: 0 0 600px;
+  height: auto;
+  filter: grayscale(0%);
+  transition: all 0.3s ease;
+}
+.pageSegmentGrid img:hover {
   filter: grayscale(100%);
   transition: all 0.3s ease;
 }
@@ -44,12 +64,11 @@
 }
 .content a {
   color: #046999;
-  font-weight: 500;
+  font-weight: 700;
 }
 .content a:hover {
   text-decoration: underline;
 }
-
 .underline {
   border-bottom: 6px solid #046999;
   width: -moz-fit-content;
@@ -65,6 +84,13 @@
 .points {
   display: grid;
   grid-template-columns: 50% 1fr;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+
+.pointsGrid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 1rem;
   margin-top: 2rem;
 }
@@ -137,4 +163,83 @@
 .cross:hover svg {
   stroke: #046999;
   color: #046999;
+}
+
+.alsoTrading {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  margin: 2rem 0 0 0;
+}
+.alsoTrading h3 {
+  margin-bottom: -0.6rem;
+}
+.alsoTrading ul {
+  list-style: none;
+  padding-left: 0;
+}
+.alsoTrading ul li {
+  display: inline-block;
+  font-size: 1.25rem;
+}
+.alsoTrading ul li:not(:last-child)::after {
+  content: "•";
+  margin: 0 0.5rem;
+}
+
+.points {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.point {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.point p {
+  color: #777a7e;
+  margin: 0 !important;
+  line-height: 1.5rem;
+}
+
+.tick {
+  height: 30px;
+  width: 30px;
+  min-width: 30px;
+  border: 1px solid #0eaa0e;
+  background-color: #0eaa0e;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  transition: all 0.5s ease;
+}
+.tick svg {
+  stroke: #f8f8f8;
+  color: #f8f8f8;
+}
+.tick:hover {
+  transition: all 0.5s ease;
+  background-color: #f8f8f8;
+}
+.tick:hover svg {
+  stroke: #0eaa0e;
+  color: #0eaa0e;
+}
+
+.btns {
+  display: flex;
+  gap: 1rem;
+  margin-top: 2rem;
+  align-items: center;
+}
+.btns a {
+  width: 160px;
+}
+.btns a:hover {
+  border: 1px solid #046999;
 }/*# sourceMappingURL=pageSegment4.module.css.map */
