--- a/styles/pageSegment4.module.scss
+++ b/styles/pageSegment4.module.scss
@@ -20,6 +20,27 @@
   }
 }
 
+.pageSegmentGrid {
+  scroll-margin-top: 100px;
+  padding: 0 10vw 2rem 10vw;
+  display: grid;
+  grid-template-columns: 60% 1fr;
+  gap: 4rem;
+  align-items: center;
+
+  img {
+    flex: 0 0 600px;
+    height: auto;
+    filter: grayscale(0%);
+    transition: all 0.3s ease;
+
+    &:hover {
+      filter: grayscale(100%);
+      transition: all 0.3s ease;
+    }
+  }
+}
+
 .pageSegmentCenter {
   scroll-margin-top: 100px;
   padding: 0 10vw 2rem 10vw;
@@ -51,10 +72,13 @@
 
   a {
     color: $theme;
-    font-weight: 500;
+    font-weight: 700;
     &:hover {
       text-decoration: underline;
     }
+  }
+
+  h2 {
   }
 }
 
@@ -73,6 +97,13 @@
 .points {
   display: grid;
   grid-template-columns: 50% 1fr;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+
+.pointsGrid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 1rem;
   margin-top: 2rem;
 }
@@ -143,6 +174,88 @@
     svg {
       stroke: $theme;
       color: $theme;
+    }
+  }
+}
+
+.alsoTrading {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  margin: 2rem 0 0 0;
+  h3 {
+    margin-bottom: -0.6rem;
+  }
+
+  ul {
+    list-style: none;
+    padding-left: 0;
+
+    li {
+      display: inline-block;
+      font-size: 1.25rem;
+
+      &:not(:last-child)::after {
+        content: "•";
+        margin: 0 0.5rem;
+      }
+    }
+  }
+}
+
+.points {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.point {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  p {
+    color: $darkGrayText;
+    margin: 0 !important;
+    line-height: 1.5rem;
+  }
+}
+
+.tick {
+  height: 30px;
+  width: 30px;
+  min-width: 30px;
+  border: 1px solid #0eaa0e;
+  background-color: #0eaa0e;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  transition: all 0.5s ease;
+  svg {
+    stroke: $offWhite;
+    color: $offWhite;
+  }
+  &:hover {
+    transition: all 0.5s ease;
+    background-color: $offWhite;
+    svg {
+      stroke: #0eaa0e;
+      color: #0eaa0e;
+    }
+  }
+}
+
+.btns {
+  display: flex;
+  gap: 1rem;
+  margin-top: 2rem;
+  align-items: center;
+  a {
+    width: 160px;
+    &:hover {
+      border: 1px solid $theme;
     }
   }
 }
