image and metadata updated

--- a/styles/expertsAwait.module.css
+++ b/styles/expertsAwait.module.css
@@ -203,21 +203,59 @@
   border-radius: 50%;
   transition: background-color 0.3s ease;
 }
-.card:hover {
-  background-color: #046999;
+@media (hover: hover) {
+  .card:hover {
+    background-color: #046999;
+  }
+  .card:hover .imageWrapper {
+    animation: bounce 1.2s cubic-bezier(0.28, 0.84, 0.42, 1);
+  }
+  .card:hover .imageWrapper img {
+    filter: brightness(0) invert(1);
+  }
+  .card:hover p {
+    color: #f8f8f8;
+  }
+  .card:hover::before {
+    background-color: #046999;
+    filter: brightness(1.2);
+  }
 }
-.card:hover .imageWrapper {
-  animation: bounce 1.2s cubic-bezier(0.28, 0.84, 0.42, 1);
+@media (max-width: 449px) {
+  .card[data-intersecting=true] {
+    background-color: #046999 !important;
+  }
+  .card[data-intersecting=true] .imageWrapper {
+    animation: bounce 1.2s cubic-bezier(0.28, 0.84, 0.42, 1);
+  }
+  .card[data-intersecting=true] .imageWrapper img {
+    filter: brightness(0) invert(1) !important;
+  }
+  .card[data-intersecting=true] p {
+    color: #f8f8f8 !important;
+  }
+  .card[data-intersecting=true]::before {
+    background-color: #046999 !important;
+    filter: brightness(1.2);
+  }
 }
-.card:hover .imageWrapper img {
-  filter: brightness(0) invert(1);
-}
-.card:hover p {
-  color: #f8f8f8;
-}
-.card:hover::before {
-  background-color: #046999;
-  filter: brightness(1.2);
+@media (min-width: 450px) and (max-width: 766px) {
+  .card[data-intersecting=true] {
+    background-color: #046999 !important;
+  }
+  .card[data-intersecting=true] .imageWrapper {
+    animation: bounce 1.2s cubic-bezier(0.28, 0.84, 0.42, 1);
+  }
+  .card[data-intersecting=true] .imageWrapper img {
+    filter: brightness(0) invert(1) !important;
+  }
+  .card[data-intersecting=true] p {
+    color: #f8f8f8 !important;
+  }
+  .card[data-intersecting=true]::before {
+    background-color: #046999 !important;
+    filter: brightness(1.2);
+  }
 }
 
 @keyframes bounce {
