--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -1,8 +1,4 @@
 .headTop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
   z-index: 1000;
   background-color: #1e1e1e;
   display: flex;
@@ -67,7 +63,7 @@
 .header.scrolled {
   background-color: #1e1e1e;
   border-bottom: none;
-  margin-top: 40px;
+  margin-top: 0;
   transition: all 0.5s ease;
   height: 80px;
 }
@@ -154,6 +150,11 @@
   width: 100%;
   height: 1.9rem;
   background-color: transparent;
+}
+.navItem p,
+.navItem a {
+  font-weight: 700;
+  letter-spacing: 1px;
 }
 
 .navLink {
