--- a/styles/contact.module.scss
+++ b/styles/contact.module.scss
@@ -290,7 +290,7 @@
     color: $grayText;
     &::placeholder {
       color: $grayText;
-      opacity: 0.7;
+      // opacity: 0.7;
       font-style: italic;
       font-size: 0.8rem;
     }
