--- a/styles/ctaFull.module.css
+++ b/styles/ctaFull.module.css
@@ -7,11 +7,13 @@
 }
 
 .ctaWrapper {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   padding: 0 20vw;
+  height: 485px;
 }
 @media (max-width: 449px) {
   .ctaWrapper {
@@ -36,7 +38,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.5);
   z-index: 2;
 }
 .ctaWrapper H2 {
