--- a/styles/services.module.scss
+++ b/styles/services.module.scss
@@ -12,7 +12,7 @@
     position: relative;
     width: 100%;
     max-width: 600px; // Original image width
-    aspect-ratio: 3/2; // Based on your 600/400 dimensions
+    aspect-ratio: 3/2;
 
     img {
       width: 100%;
