--- a/styles/services.module.scss
+++ b/styles/services.module.scss
@@ -7,12 +7,15 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 1.5rem;
   padding: 8rem;
+  @include phone {
+    padding: 4rem 2rem 8rem 2rem !important;
+  }
 
   .imageWrapper {
     position: relative;
     width: 100%;
     max-width: 600px; // Original image width
-    aspect-ratio: 3/2;
+    aspect-ratio: 3/2; // Based on your 600/400 dimensions
 
     img {
       width: 100%;
@@ -89,11 +92,10 @@
     font-weight: 500;
     letter-spacing: 1px;
     margin-bottom: -0.8rem;
-    display: inline; // Makes the element only as wide as its content
-    background-image: linear-gradient($theme, $theme); // Use your theme color
+    display: inline;
     background-size: 100% 10px;
     background-repeat: no-repeat;
-    background-position: 0 calc(100% + 4px); // Positions the line below the text
+    background-position: 0 calc(100% + 4px);
   }
 
   span {
