--- a/styles/isRight.module.css
+++ b/styles/isRight.module.css
@@ -106,6 +106,11 @@
   margin: 1.5rem 0 2rem 0;
 }
 
+.link {
+  color: #046999;
+  font-weight: 700;
+}
+
 .sub {
   border-bottom: 6px solid rgba(183, 183, 183, 0.3294117647);
   width: -moz-fit-content;
