--- a/styles/isRight.module.scss
+++ b/styles/isRight.module.scss
@@ -93,6 +93,11 @@
   }
 }
 
+.link {
+  color: $theme;
+  font-weight: 700;
+}
+
 .sub {
   border-bottom: 6px solid #b7b7b754;
   width: fit-content;
