--- a/styles/pageSegment3.module.scss
+++ b/styles/pageSegment3.module.scss
@@ -13,6 +13,11 @@
     max-width: 80%;
   }
 
+  a {
+    color: $theme !important;
+    font-weight: 700 !important;
+  }
+
   img {
     filter: grayscale(0%);
     transition: all 0.3s ease;
@@ -26,6 +31,10 @@
 
     @include phone {
       max-width: 90vw;
+      height: auto;
+      width: auto;
+      object-fit: contain;
+      aspect-ratio: 4/3;
     }
     @include phoneLandscape {
       max-width: 90vw;
@@ -73,7 +82,25 @@
       filter: grayscale(100%);
       transition: all 0.3s ease;
     }
-    max-width: 95vw;
+    max-width: 80vw;
+    width: auto;
+    height: auto !important;
+    object-fit: contain;
+    aspect-ratio: 4/3;
+  }
+  
+  .imageCrush {
+    filter: grayscale(0%);
+    transition: all 0.3s ease;
+    &:hover {
+      filter: grayscale(100%);
+      transition: all 0.3s ease;
+    }
+    max-width: 80vw;
+    width: auto;
+    height: auto !important;
+    object-fit: contain;
+    aspect-ratio: 4/3;
   }
 
   @include phone {
@@ -83,6 +110,7 @@
       max-width: 100%;
     }
   }
+
   @include phoneLandscape {
     flex-direction: column;
     p {
@@ -100,11 +128,6 @@
   h2 {
     font-size: 1.5rem;
     font-weight: 700;
-    // display: inline; // Makes the element only as wide as its content
-    // background-image: linear-gradient($theme, $theme); // Use your theme color
-    // background-size: 100% 6px;
-    // background-repeat: no-repeat;
-    // background-position: 0 calc(100% + 4px); // Positions the line below the text
   }
 }
 
