--- a/styles/faqSection.module.css
+++ b/styles/faqSection.module.css
@@ -34,6 +34,27 @@
   }
 }
 
+.contentsSection {
+  padding: 6rem 10vw;
+  display: grid;
+  grid-template-columns: 1fr 50%;
+  gap: 4vw;
+  max-width: 100vw;
+}
+.contentsSection p {
+  padding: 1rem;
+}
+@media screen and (max-width: 1200px) {
+  .contentsSection {
+    display: flex;
+    flex-direction: column;
+    padding: 0 1rem 6rem 1rem;
+  }
+  .contentsSection h2 {
+    margin-top: 2rem;
+  }
+}
+
 .faqContainer {
   display: flex;
   flex-direction: column;
