--- a/styles/faqSection.module.scss
+++ b/styles/faqSection.module.scss
@@ -28,6 +28,25 @@
   }
 }
 
+.contentsSection {
+  padding: 6rem 10vw;
+  display: grid;
+  grid-template-columns: 1fr 50%;
+  gap: 4vw;
+  max-width: 100vw;
+  p {
+    padding: 1rem;
+  }
+  @media screen and (max-width: 1200px) {
+    display: flex;
+    flex-direction: column;
+    padding: 0 1rem 6rem 1rem;
+    h2 {
+      margin-top: 2rem;
+    }
+  }
+}
+
 .faqContainer {
   display: flex;
   flex-direction: column;
