--- a/styles/blogPost.module.scss
+++ b/styles/blogPost.module.scss
@@ -228,6 +228,7 @@
   border: 10px solid $theme;
   img {
     border-radius: 50%;
+    filter: grayscale(100%);
   }
 }
 
@@ -374,5 +375,23 @@
   .plus {
     font-size: 1rem;
     margin: 0 0.1rem;
+  }
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+  gap: 4rem;
+  margin-top: 0.5rem;
+  .shortcutKeys {
+    min-width: 30%;
+  }
+
+  @media screen and (max-width: 700px) {
+    flex-direction: column;
+    gap: 1rem;
+    .shortcutKeys {
+      min-width: 80%;
+    }
   }
 }
