--- a/styles/pageSegment3.module.css
+++ b/styles/pageSegment3.module.css
@@ -10,6 +10,10 @@
   line-height: 2rem;
   max-width: 80%;
 }
+.pageSegment a {
+  color: #046999 !important;
+  font-weight: 700 !important;
+}
 .pageSegment img {
   filter: grayscale(0%);
   transition: all 0.3s ease;
@@ -24,6 +28,11 @@
 @media (max-width: 449px) {
   .pageSegment img {
     max-width: 90vw;
+    height: auto;
+    width: auto;
+    -o-object-fit: contain;
+       object-fit: contain;
+    aspect-ratio: 4/3;
   }
 }
 @media (min-width: 450px) and (max-width: 766px) {
@@ -72,9 +81,28 @@
 .pageSegmentCentered img {
   filter: grayscale(0%);
   transition: all 0.3s ease;
-  max-width: 95vw;
+  max-width: 80vw;
+  width: auto;
+  height: auto !important;
+  -o-object-fit: contain;
+     object-fit: contain;
+  aspect-ratio: 4/3;
 }
 .pageSegmentCentered img:hover {
+  filter: grayscale(100%);
+  transition: all 0.3s ease;
+}
+.pageSegmentCentered .imageCrush {
+  filter: grayscale(0%);
+  transition: all 0.3s ease;
+  max-width: 80vw;
+  width: auto;
+  height: auto !important;
+  -o-object-fit: contain;
+     object-fit: contain;
+  aspect-ratio: 4/3;
+}
+.pageSegmentCentered .imageCrush:hover {
   filter: grayscale(100%);
   transition: all 0.3s ease;
 }
@@ -291,4 +319,202 @@
   .paddedTop {
     padding: 4rem 1rem 0 1rem;
   }
+}
+
+.deskImage {
+  display: flex;
+  margin: 3rem auto;
+}
+@media (max-width: 449px) {
+  .deskImage {
+    display: none;
+  }
+}
+@media (min-width: 450px) and (max-width: 766px) {
+  .deskImage {
+    display: none;
+  }
+}
+@media (min-width: 767px) and (max-width: 1024px) {
+  .deskImage {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .mobImage {
+    display: none;
+  }
+}
+
+@media (max-width: 449px) {
+  .deskOnly {
+    display: none;
+    margin-bottom: 3rem;
+  }
+}
+@media (min-width: 450px) and (max-width: 766px) {
+  .deskOnly {
+    display: none;
+    margin-bottom: 3rem;
+  }
+}
+@media (min-width: 767px) and (max-width: 1024px) {
+  .deskOnly {
+    display: none;
+    margin-bottom: 3rem;
+  }
+}
+
+.useCases {
+  margin: 3rem 0 3rem 0;
+  padding: 0;
+}
+@media (min-width: 767px) and (max-width: 1024px) {
+  .useCases {
+    padding: 0 1rem;
+  }
+}
+.useCases h3 {
+  font-size: 1.5rem;
+  text-align: center;
+}
+@media (max-width: 449px) {
+  .useCases {
+    margin: 2rem 0;
+    padding: 0;
+  }
+}
+
+.gridHolder {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+  margin-bottom: 2rem;
+}
+@media screen and (max-width: 700px) {
+  .gridHolder {
+    grid-template-columns: 1fr !important;
+    padding: 0 1rem;
+  }
+}
+.gridHolder img {
+  margin-left: auto;
+  align-self: center;
+}
+@media screen and (max-width: 700px) {
+  .gridHolder img {
+    display: none;
+  }
+}
+.gridHolder div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
+.gridHolder p {
+  text-align: center;
+}
+@media screen and (max-width: 700px) {
+  .gridHolder {
+    grid-template-columns: 25% 1fr;
+  }
+  .gridHolder img {
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 449px) {
+  .DeskImg {
+    display: none;
+  }
+}
+@media (min-width: 450px) and (max-width: 766px) {
+  .DeskImg {
+    display: none;
+  }
+}
+
+.centered {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (max-width: 1100px) {
+  .centered {
+    flex-direction: column;
+  }
+  .centered img {
+    margin-bottom: 2rem;
+  }
+}
+.centered div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.centered h2,
+.centered p {
+  text-align: center;
+}
+@media screen and (max-width: 700px) {
+  .centered h2,
+  .centered p {
+    text-align: left;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .padLess {
+    padding: 0 1rem !important;
+  }
+}
+
+.ourProcess {
+  padding: 0 5vw;
+  display: grid;
+  grid-template-columns: 1fr fr;
+}
+@media (min-width: 767px) and (max-width: 1024px) {
+  .ourProcess {
+    padding: 0;
+  }
+}
+.ourProcess h3 {
+  font-size: 1.5rem;
+  text-align: center;
+}
+@media (max-width: 449px) {
+  .ourProcess {
+    margin: 2rem 0;
+    padding: 0;
+  }
+}
+
+.flexHolder {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 2rem;
+}
+.flexHolder img {
+  margin-left: auto;
+  align-self: center;
+}
+@media screen and (max-width: 700px) {
+  .flexHolder img {
+    display: none;
+  }
+}
+.flexHolder div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
+.flexHolder p {
+  text-align: center;
 }/*# sourceMappingURL=pageSegment3.module.css.map */
