--- a/styles/hero.module.scss
+++ b/styles/hero.module.scss
@@ -134,6 +134,7 @@
     justify-content: center;
     width: 225px;
     height: 70px;
+    z-index: 5;
     @include phone {
       width: 180px;
       height: 50px;
