--- a/styles/pageSegment2.module.css
+++ b/styles/pageSegment2.module.css
@@ -7,6 +7,10 @@
   gap: 2rem;
   padding: 4rem 10vw;
 }
+.pageSegment a {
+  color: #046999;
+  font-weight: 700;
+}
 @media (min-width: 767px) and (max-width: 1024px) {
   .pageSegment {
     padding: 4rem 2vw;
