--- a/styles/pageSegment3.module.scss
+++ b/styles/pageSegment3.module.scss
@@ -88,7 +88,7 @@
     object-fit: contain;
     aspect-ratio: 4/3;
   }
-  
+
   .imageCrush {
     filter: grayscale(0%);
     transition: all 0.3s ease;
@@ -283,5 +283,170 @@
   }
   @include phone {
     padding: 4rem 1rem 0 1rem;
+  }
+}
+
+.deskImage {
+  display: flex;
+  margin: 3rem auto;
+  @include phone {
+    display: none;
+  }
+  @include phoneLandscape {
+    display: none;
+  }
+  @include tablet {
+    display: none;
+  }
+}
+
+.mobImage {
+  @media screen and (min-width: 600px) {
+    display: none;
+  }
+}
+
+.deskOnly {
+  @include phone {
+    display: none;
+    margin-bottom: 3rem;
+  }
+  @include phoneLandscape {
+    display: none;
+    margin-bottom: 3rem;
+  }
+  @include tablet {
+    display: none;
+    margin-bottom: 3rem;
+  }
+}
+
+.useCases {
+  margin: 3rem 0 3rem 0;
+  padding: 0;
+  @include tablet {
+    padding: 0 1rem;
+  }
+  h3 {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  @include phone {
+    margin: 2rem 0;
+    padding: 0;
+  }
+}
+
+.gridHolder {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+  margin-bottom: 2rem;
+  @media screen and (max-width: 700px) {
+    grid-template-columns: 1fr !important;
+    padding: 0 1rem;
+  }
+  img {
+    margin-left: auto;
+    align-self: center;
+    @media screen and (max-width: 700px) {
+      display: none;
+    }
+  }
+  div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+  }
+  p {
+    text-align: center;
+  }
+  @media screen and (max-width: 700px) {
+    grid-template-columns: 25% 1fr;
+    img {
+      margin: 0 auto;
+    }
+  }
+}
+
+.DeskImg {
+  @include phone {
+    display: none;
+  }
+  @include phoneLandscape {
+    display: none;
+  }
+}
+
+.centered {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  @media screen and (max-width: 1100px) {
+    flex-direction: column;
+    img {
+      margin-bottom: 2rem;
+    }
+  }
+  div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  h2,
+  p {
+    text-align: center;
+    @media screen and (max-width: 700px) {
+      text-align: left;
+    }
+  }
+}
+
+.padLess {
+  @media screen and (max-width: 700px) {
+    padding: 0 1rem !important;
+  }
+}
+
+.ourProcess {
+  padding: 0 5vw;
+  display: grid;
+  grid-template-columns: 1fr fr;
+  @include tablet {
+    padding: 0;
+  }
+  h3 {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  @include phone {
+    margin: 2rem 0;
+    padding: 0;
+  }
+}
+
+.flexHolder {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 2rem;
+  img {
+    margin-left: auto;
+    align-self: center;
+    @media screen and (max-width: 700px) {
+      display: none;
+    }
+  }
+  div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+  }
+  p {
+    text-align: center;
   }
 }
