--- a/styles/testimonialsSection.module.css
+++ b/styles/testimonialsSection.module.css
@@ -21,9 +21,10 @@
     padding: 2rem;
   }
 }
-@media (min-width: 450px) and (max-width: 766px) {
+@media screen and (max-width: 740px) {
   .testimonials {
-    padding: 2rem;
+    padding: 2rem 1rem;
+    margin: 4rem auto 3rem auto;
   }
 }
 
