--- a/styles/pageSegment.module.scss
+++ b/styles/pageSegment.module.scss
@@ -8,7 +8,7 @@
   margin: 8rem;
   @include phone {
     flex-direction: column;
-    margin: 6rem 1rem;
+    margin: 3rem 1rem 6rem 1rem;
   }
   @include phoneLandscape {
     flex-direction: column;
