--- a/styles/pageSegmentCenter.module.css
+++ b/styles/pageSegmentCenter.module.css
@@ -6,7 +6,7 @@
   gap: 4rem;
 }
 .pageSegment h2 {
-  font-size: 1.5rem;
+  font-size: 2rem;
   margin-bottom: 1.5rem;
 }
 .pageSegment img {
@@ -59,7 +59,7 @@
   gap: 10vw;
 }
 .pageSegmentReverse h2 {
-  font-size: 1.5rem;
+  font-size: 2rem;
   margin-bottom: 1.5rem;
 }
 .pageSegmentReverse img {
@@ -144,7 +144,7 @@
   margin-bottom: 2rem;
 }
 .underline h2 {
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-weight: 700;
   margin-bottom: -0.5rem;
 }
@@ -395,6 +395,10 @@ details[open] .dropdowns .serviceSummary::after {
   color: #777a7e;
   line-height: 1.6;
 }
+.gridSegment a {
+  color: #046999;
+  font-weight: 700;
+}
 .gridSegment strong {
   color: #0a0a0a;
 }
@@ -411,6 +415,26 @@ details[open] .dropdowns .serviceSummary::after {
   grid-column: span 2;
   text-align: center;
   line-height: 2;
+}
+.gridSegment .content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem;
+}
+.gridSegment .content h2 {
+  text-align: center;
+}
+.gridSegment .content p {
+  text-align: center;
+  font-size: 1.25rem;
+  max-width: 66%;
+}
+@media screen and (max-width: 1240px) {
+  .gridSegment .content p {
+    max-width: 100%;
+  }
 }
 @media screen and (max-width: 1240px) {
   .gridSegment {
