--- a/styles/teamCard.module.css
+++ b/styles/teamCard.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 1rem;
   padding: 1.5rem;
   transition: transform 0.3s ease;
@@ -20,13 +20,10 @@
 .image {
   -o-object-fit: cover;
      object-fit: cover;
-  width: 200px;
+  width: 240px;
   height: 240px;
-  filter: grayscale(100%);
-  transition: filter 0.3s ease;
-}
-.image:hover {
   filter: grayscale(0%);
+  transition: filter 0.3s ease;
 }
 
 .name {
