--- a/styles/teamCard.module.scss
+++ b/styles/teamCard.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 1rem;
   padding: 1.5rem;
   transition: transform 0.3s ease;
@@ -22,13 +22,10 @@
 
 .image {
   object-fit: cover;
-  width: 200px;
+  width: 240px;
   height: 240px;
-  filter: grayscale(100%);
+  filter: grayscale(0%);
   transition: filter 0.3s ease;
-  &:hover {
-    filter: grayscale(0%);
-  }
 }
 
 .name {
