--- a/styles/testimonialsSection.module.scss
+++ b/styles/testimonialsSection.module.scss
@@ -18,8 +18,9 @@
   @include tablet {
     padding: 2rem;
   }
-  @include phoneLandscape {
-    padding: 2rem;
+  @media screen and (max-width: 740px) {
+    padding: 2rem 1rem;
+    margin: 4rem auto 3rem auto;
   }
 }
 .box {
